package org.tricodex.utils.interfaces;

public interface RandomMoveable {
    void moveRandomly();
}
